[KARAF-6203]ensure karaf can build and run with JDK12-remove WARNING: Illegal reflective access